--- a/inst/VIEWS/summary_NESTS.Rmd
+++ b/inst/VIEWS/summary_NESTS.Rmd
@@ -16,7 +16,8 @@ options(xtable.comment = FALSE)
 
 ```{r nests, echo=FALSE, message=FALSE, warning=FALSE,results='asis'}
 n = NESTS()[species == 'REPH']
-n = n[, .(nest, nest_state, lastCheck, iniClutch, clutch, IN, m_sure, f_sure, msr_state)]
+n = n[, .(nest, state = nest_state, lastCheck, iniClutch, clutch, MSR, IN, m_sure, f_sure)]
+n[nest == 'R802', m_sure := 'W,R|W']
 CA = c('R201', 'R901', 'R902', 'R1201', 'R602', 'R603', 'R801')
 n[nest %in% CA, CA := CA]
 n[!is.na(CA), CA := 'CA']
