added closed nests

--- a/inst/VIEWS/summary_NESTS.Rmd
+++ b/inst/VIEWS/summary_NESTS.Rmd
@@ -29,7 +29,8 @@ n[, Rick := NULL]
 n[state == 'P', m_sure := '----']
 
 # exclude closed nests
-closed = c('R202', 'R204', 'R205', 'R605', 'R701', 'R803', 'R804', 'R904', 'R909', 'R1201', 'R801', 'R902')
+closed = c('R202', 'R204', 'R205', 'R605', 'R701', 'R803', 'R804', 'R904', 'R909', 'R1201', 'R801', 'R902',
+           'R302', 'R303', 'R304', 'R601', 'R805', 'R807', 'R808', 'R810')
 n[nest %in% closed, closed := TRUE]
 n = n[is.na(closed)]
 n[, closed := NULL]
