--- a/inst/VIEWS/summary_NESTS.Rmd
+++ b/inst/VIEWS/summary_NESTS.Rmd
@@ -15,31 +15,8 @@ options(xtable.comment = FALSE)
 ###Reference date: `r Sys.Date()`
 
 ```{r nests, echo=FALSE, message=FALSE, warning=FALSE,results='asis'}
-n = NESTS()# [species == 'REPH']
+n = NESTS()
 n = n[, .(nest, state = nest_state, lastCheck, iniClutch, clutch, MSR, IN, m_sure, f_sure)]
-n[nest == 'R802', m_sure := 'W,R|W']
-n[nest == 'R501', m_sure := 'O,O|Y']
-CA = c('R201', 'R901', 'R902', 'R1201', 'R602', 'R603', 'R801', 'R703')
-n[nest %in% CA, CA := CA]
-n[!is.na(CA), CA := 'CA']
-n[nest %like% 'REPH', Rick := TRUE]
-n = n[is.na(Rick)]
-n[, Rick := NULL]
-
-n[state == 'P', m_sure := '----']
-
-# exclude closed nests
-closed = c('R202', 'R204', 'R205', 'R605', 'R701', 'R803', 'R804', 'R904', 'R909', 'R1201', 'R801', 'R902',
-           'R302', 'R303', 'R304', 'R601', 'R805', 'R807', 'R808', 'R810',
-           'R501', 'R502', 'R802', 'R812', 'R201', 'R602', 'R901', 'P301', 'P603', 'P801',
-           'P1201', 'P302', 'P303', 'P304', 'P604', 'R401',
-           'P601', 'P602', 'P605', 'R203', 'R604', 'R607', 'R608', 'R702', 'R809', 'R811', 'R903', 'R905', 'R906', 'R603', 'R703')
-n[nest %in% closed, closed := TRUE]
-n = n[is.na(closed)]
-n[, closed := NULL]
-
-setorder(n, CA, nest)
-
 
 x = xtable(n, auto = TRUE, caption = NULL, floating = TRUE, floating.environment = "sidewaystable", latex.environments = "" )
 
